--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -23,6 +23,7 @@ coroutines = "1.10.1"
 splashScreen = "1.0.1"
 dataStore = "1.1.4"
 kotlix-serialization = "1.8.0"
+compose-extended-icons = "1.7.8"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -79,6 +80,9 @@ androidx-lifecycle-runtime-compose = { group = "androidx.lifecycle", name = "lif
 # Coroutines
 kotlinx-coroutines-core = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-core", version.ref = "coroutines" }
 kotlinx-coroutines-android = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-android", version.ref = "coroutines" }
+
+#extended material icons
+adroidx-compose-material-icons-extended = { group = "androidx.compose.material", name = "material-icons-extended", version.ref = "compose-extended-icons" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
