feat: Implement periodic collection review notifications
- Added `WorkManagerModule` for providing `WorkManager` instance via Hilt.
- Implemented `NotificationHelper` utility class for creating notification channels, showing notifications, and managing `WorkManager` scheduling/cancellation.
- Created `NotificationWorker` to generate notification content based on collection statistics, store notifications in the database, and display system notifications using `NotificationHelper`.
- Integrated `NotificationWorker` with Hilt for dependency injection.
- Modified `SettingsViewModel` to use `NotificationHelper`'s static methods to schedule or cancel daily notifications based on the user's preference.
- Added `NotificationScheduler` (although `NotificationHelper`'s static methods are now used by `SettingsViewModel`, this class remains as a potential alternative for scheduling logic).
- Added `androidx.hilt.common` and `androidx.work.runtime.ktx` dependencies.
- Added `POST_NOTIFICATIONS` permission to `AndroidManifest.xml`.
- Added `InitializationProvider` for `WorkManager` to `AndroidManifest.xml`.
- Added a permission request for `POST_NOTIFICATIONS` in `MainActivity` for Android 13+.
- Modified `MainActivity` to observe the dark mode preference from `PreferenceRepository` using a flow and apply it to the `AntiqueCollectorTheme`.
- Removed database initialization log from the `MainActivity`'s `lifecycleScope.launch`.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -25,11 +25,14 @@ splashScreen = "1.0.1"
 dataStore = "1.1.4"
 kotlix-serialization = "1.8.0"
 compose-extended-icons = "1.7.8"
+workRuntimeKtx = "2.10.1"
+hiltCommon = "1.2.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 androidx-paging-compose = { module = "androidx.paging:paging-compose", version.ref = "pagingCompose" }
 androidx-paging-runtime = { module = "androidx.paging:paging-runtime", version.ref = "pagingCompose" }
+androidx-work-runtime-ktx = { module = "androidx.work:work-runtime-ktx", version.ref = "workRuntimeKtx" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
@@ -86,6 +89,7 @@ kotlinx-coroutines-android = { group = "org.jetbrains.kotlinx", name = "kotlinx-
 
 #extended material icons
 adroidx-compose-material-icons-extended = { group = "androidx.compose.material", name = "material-icons-extended", version.ref = "compose-extended-icons" }
+androidx-hilt-common = { group = "androidx.hilt", name = "hilt-common", version.ref = "hiltCommon" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
